# School_game

./: CMakeLists.txt  Navodila.docx  main.cpp
Code/Game/: Game.cpp  Game.h
Code/GameObject/: GameObject.cpp  GameObject.h
Code/Map/: Map.cpp  Map.h
Code/Menu/: Menu.cpp  Menu.h
Code/Objects/: Animal.cpp  Animal.h  Scientist.cpp  Scientist.h
Code/RandomObjects/: RandomObjects.cpp  RandomObjects.h
Code/TextureManager/: TextureManager.cpp  TextureManager.h
